deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-app-deploy
  namespace: multi-cloud
  labels:
    app: helloworld-app
spec:
  selector:
    matchLabels:
      app: helloworld-app
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld-app
    spec:
      imagePullSecrets:
      - name: gitlab-registry-auth
      containers:
      - name: helloworld-app-container
        image: "registry.gitlab.com/gitlab-com/alliances/ibm-red-hat/sandbox/customer-k/multi-cloud-demo/main"
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          request:
            cpu: 50m
            memory: 64Mi
      triggers:
      - type: ConfigChange
      - imageChangeParams:
          automatic: true
          containerNames:
          - helloworld-app-container
          from:
            kind: ImageStreamTag
            name: registry.gitlab.com/gitlab-com/alliances/ibm-red-hat/sandbox/customer-k/multi-cloud-demo/main
        type: ImageChange
