deployment/deploymentconfig.yaml
apiVersion: apps/v1
kind: DeploymentConfig
metadata:
  name: helloworld-dc-production
  namespace: multi-cloud
  labels:
    app: helloworld-app
spec:
  replicas: 1
  selector:
    app: helloworld-app
    deploymentconfig: helloworld-dc-production
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        app: helloworld-app
        deploymentconfig: helloworld-dc-production
    spec:
      imagePullSecrets:
      - name: gitlab-registry-auth
      containers:
      - name: helloworld-app-production
        image: helloworld-imagestream:production
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          request:
            cpu: 50m
            memory: 64Mi
  test: false
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - helloworld-app-production
      from:
        kind: ImageStreamTag
        namespace: multi-cloud
        name: helloworld-imagestream:production
